--- a/css/common.css
+++ b/css/common.css
@@ -208,6 +208,7 @@ p {
   border-top: 1px solid #dbdbdb;
   border-bottom: 1px solid #dbdbdb;
   margin-bottom: 60px;
+  padding-bottom: 20px;
 }
 
 .speakers img {
@@ -251,19 +252,21 @@ p {
 /* ORGANIZERS */
 
 .jumbotron#organizers {
-  background-image: url("../images/organizer.jpg");
+  background-image: url("../images/jumbotron/organizer.png");
 }
 
 .organizers {
   background-color: #f7f7f7;
   border-top: 1px solid #dbdbdb;
   border-bottom: 1px solid #dbdbdb;
+  padding-top: 20px;
+  margin-bottom: 60px;
 }
 
 .organizers img {
   width: 200px;
   border: 4px solid #dbdbdb;
-  margin-top: 20px;
+  margin-top: 40px;
   margin-bottom: 20px;
 }
 
@@ -318,9 +321,9 @@ p {
 .sponsors {
   background-color: white;
   border-top: 1px solid #dbdbdb;
-  border-bottom: 1px solid #dbdbdb;
   padding-top: 25px;
   padding-bottom: 25px;
+  margin-top: -70px;
 }
 
 .sponsors .container {
