finish adding pictures

--- a/css/common.css
+++ b/css/common.css
@@ -255,7 +255,7 @@ p {
 /* ORGANIZERS */
 
 .jumbotron#organizers {
-  background-image: url("../images/jumbotron/organizer.jpg");
+  background-image: url("../images/jumbotron/organizer.png");
 }
 
 .organizers {
