add jumbotron image for organizer page

--- a/css/common.css
+++ b/css/common.css
@@ -269,7 +269,7 @@ p {
 /* ORGANIZERS */
 
 .jumbotron#organizers {
-  background-image: url("../images/jumbotron/organizer.png");
+  background-image: url("../images/jumbotron/organizer.jpg");
 }
 
 .organizers {
