--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,21 +1,18 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="ko">
 
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>2017 TEDxPOSTECH</title>
 
-    <link rel="stylesheet" href="./bootstrap-3.3.7-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
-    <script src="./bootstrap-3.3.7-dist/js/jquery-3.1.1.min.js"></script>
-    <script src="./bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
-
-    <link rel="stylesheet" href="./css/common.css">
-    <link href="https://tedcdnpa-a.akamaihd.net/favicon.ico" rel="shortcut icon">
+    <link rel="stylesheet" href="{% static 'core/bootstrap-4.1.1-dist/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'core/css/style.css' %}">
+    <link href="{% static 'core/favicon/favicon.ico' %}" rel="shortcut icon">
   </head>
-          
 
   <body>
     <div class="page-wrap">
@@ -63,6 +60,9 @@
         <p class="pull-right"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> tedx.postech.organizer@gmail.com</p>
       </div>
     </div>
+
+    <script src={% static 'core/bootstrap-4.1.1-dist/js/jquery-3.3.1.min.js' %}></script>
+    <script src={% static 'core/bootstrap-4.1.1-dist/js/bootstrap.min.js' %}></script>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
