--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,79 +1,13 @@
+{% extends 'core/base.html' %}
+
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="ko">
-
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <title>2017 TEDxPOSTECH</title>
-
-    <link rel="stylesheet" href="{% static 'core/bootstrap-4.1.1-dist/css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'core/css/style.css' %}">
-    <link href="{% static 'core/favicon/favicon.ico' %}" rel="shortcut icon">
-  </head>
-
-  <body>
-    <div class="page-wrap">
-
-      <div class="header">
-        <div class="container">
-          <div class="logo">
-            <a href="index.html"><img src="./images/logo.png"></a>
-          </div>
-          <ul class="pull-right nav nav-pills">
-            <li><a href="about.html">About</a></li>
-            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Past Event <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="2016.html">2016 TEDxPOSTECH</a></li>
-                <li><a href="2015.html">2015 TEDxPOSTECH</a></li>
-                <li><a href="2011.html">2011 TEDxPOSTECH</a></li>
-              </ul>
-            </li>
-            <li><a href="speakers.html">Speakers</a></li>
-            <li><a href="organizers.html">Organizers</a></li>
-            <li><a href="sponsors.html">Sponsors</a></li>
-            <li><a href="register.html">Register</a></li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="main">
-
-        <div class="container">
-
-          <div class="img-wrapper">
+{% block main %}
+<main>
+    <div class="container">
+        <div class="img-wrapper">
             <img src="images/index.jpg">
-          </div>
-
         </div>
-
-      </div>
-
     </div>
-
-
-    <div class="footer">
-      <div class="container">
-        <p class="pull-left">※This independent TEDx event is operated under license from TED.</p>
-        <p class="pull-right"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> tedx.postech.organizer@gmail.com</p>
-      </div>
-    </div>
-
-    <script src={% static 'core/bootstrap-4.1.1-dist/js/jquery-3.3.1.min.js' %}></script>
-    <script src={% static 'core/bootstrap-4.1.1-dist/js/bootstrap.min.js' %}></script>
-
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-68683638-1', 'auto');
-      ga('send', 'pageview');
-
-    </script>
-	
-  </body>
-</html>
+</main>
+{% endblock %}
