Make header and footer

--- a/core/templates/core/footer.html
+++ b/core/templates/core/footer.html
@@ -1,4 +1,6 @@
-<div class="container">
-    <p class="pull-left">※This independent TEDx event is operated under license from TED.</p>
-    <p class="pull-right"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> tedx.postech.organizer@gmail.com</p>
-</div>
+<footer class="footer">
+    <div class="container-fluid">
+        ※ This independent TEDx event is operated under license from TED.
+        <span class="text-muted float-right"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> tedx.postech.organizer@gmail.com</span>
+    </div>
+</footer>
