--- a/core/templates/core/header.html
+++ b/core/templates/core/header.html
@@ -1,24 +1,87 @@
 {% load static %}
 
-<div class="container">
-    <div class="logo">
-        <a href="index.html">
-            <img src="./images/logo.png">
-        </a>
+<nav class="navbar navbar-expand-lg navbar-light">
+    <a class="navbar-brand" href="{% url 'home' %}">
+        <img src="{% static 'core/images/logo.png' %}" height="30" alt="TEDxPOSTECH">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="mainNav">
+        <ul class="navbar-nav ml-auto">
+
+            {% if request.resolver_match.url_name == 'home' %}
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'home' %}">Home</a>
+            </li>
+            {% endif %}
+
+            {% if request.resolver_match.url_name == 'about' %}
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'about' %}">About <span class="sr-only">(current)</span></a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'about' %}">About</a>
+            </li>
+            {% endif %}
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="pastEventsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Past Events
+                </a>
+                <div class="dropdown-menu" aria-labelledby="pastEventsDropdown">
+                    <a class="dropdown-item" href="#">2016 TEDxPOSTECH</a>
+                    <a class="dropdown-item" href="#">2015 TEDxPOSTECH</a>
+                    <a class="dropdown-item" href="#">2011 TEDxPOSTECH</a>
+                </div>
+            </li>
+
+            {% if request.resolver_match.url_name == 'speakers' %}
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'speakers' %}">Speakers <span class="sr-only">(current)</span></a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'speakers' %}">Speakers</a>
+            </li>
+            {% endif %}
+
+            {% if request.resolver_match.url_name == 'organizers' %}
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'organizers' %}">Organizers <span class="sr-only">(current)</span></a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'organizers' %}">Organizers</a>
+            </li>
+            {% endif %}
+
+            {% if request.resolver_match.url_name == 'sponsors' %}
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'sponsors' %}">Sponsors <span class="sr-only">(current)</span></a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'sponsors' %}">Sponsors</a>
+            </li>
+            {% endif %}
+
+            {% if request.resolver_match.url_name == 'register' %}
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'register' %}">Register <span class="sr-only">(current)</span></a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'register' %}">Register</a>
+            </li>
+            {% endif %}
+
+        </ul>
     </div>
-    <ul class="pull-right nav nav-pills">
-        <li><a href="about.html">About</a></li>
-        <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Past Event <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-                <li><a href="2016.html">2016 TEDxPOSTECH</a></li>
-                <li><a href="2015.html">2015 TEDxPOSTECH</a></li>
-                <li><a href="2011.html">2011 TEDxPOSTECH</a></li>
-            </ul>
-        </li>
-        <li><a href="speakers.html">Speakers</a></li>
-        <li><a href="organizers.html">Organizers</a></li>
-        <li><a href="sponsors.html">Sponsors</a></li>
-        <li><a href="register.html">Register</a></li>
-    </ul>
-</div>
+</nav>
