--- a/core/templates/core/scripts.html
+++ b/core/templates/core/scripts.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <script src={% static 'core/bootstrap-4.1.1-dist/js/jquery-3.3.1.min.js' %}></script>
-<script src={% static 'core/bootstrap-4.1.1-dist/js/bootstrap.min.js' %}></script>
+<script src={% static 'core/bootstrap-4.1.1-dist/js/bootstrap.bundle.min.js' %}></script>
 
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
