--- a/core/templates/core/about.html
+++ b/core/templates/core/about.html
@@ -1,104 +1,50 @@
-<!DOCTYPE html>
-<html lang="ko">
+{% extends 'core/base.html' %}
 
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+{% load static %}
 
-    <title>2017 TEDxPOSTECH</title>
+{% block main %}
+<main>
 
-    <link rel="stylesheet" href="./bootstrap-3.3.7-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
-    <script src="./bootstrap-3.3.7-dist/js/jquery-3.1.1.min.js"></script>
-    <script src="./bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
-
-    <link rel="stylesheet" href="./css/common.css">
-    <link href="https://tedcdnpa-a.akamaihd.net/favicon.ico" rel="shortcut icon">
-  </head>
-          
-
-  <body>
-    <div class="header">
-      <div class="container">
-        <div class="logo">
-          <a href="index.html"><img src="./images/logo.png"></a>
-        </div>
-        <ul class="pull-right nav nav-pills">
-          <li id="active"><a href="about.html">About</a></li>
-          <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Past Event <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="2016.html">2016 TEDxPOSTECH</a></li>
-              <li><a href="2015.html">2015 TEDxPOSTECH</a></li>
-              <li><a href="2011.html">2011 TEDxPOSTECH</a></li>
-            </ul>
-          </li>
-          <li><a href="speakers.html">Speakers</a></li>
-          <li><a href="organizers.html">Organizers</a></li>
-          <li><a href="sponsors.html">Sponsors</a></li>
-          <li><a href="register.html">Register</a></li>
-        </ul>
-      </div>
+  <div class="jumbotron" id="about">
+    <div class="container">
+      <h1>TED와 TEDx</h1>
+      <p>세계적으로 유명한 강연회 TED와 TED-like experience, TEDx를 소개합니다.</p>
     </div>
+  </div>
 
-    <div class="jumbotron" id="about">
-      <div class="container">
-        <h1>TED와 TEDx</h1>
-        <p>세계적으로 유명한 강연회 TED와 TED-like experience, TEDx를 소개합니다.</p>
-      </div>
-    </div>
+  <div class="about">
+    <div class="container">
 
-    <div class="about">
-      <div class="container">
+      <div class="row">
 
-        <div class="row">
-
-          <div class="col-xs-6 left">
-            <div class="thumbnail">
-              <img src="./images/tedx.png">
-            </div>
-            <h3>About TEDx<br>x = independently organized event</h3>
-            <p>TEDx는 널리 퍼져야할 아이디어(ideas worth spreading)라는 정신으로 사람들에게 TED스러운 경험을 나눌 수 있도록 지역적이고 자체적으로 조직되는 프로그램입니다. TEDx 행사에서는 TED 강연 영상과 현장의 연사들이 조화를 이루며 깊이 있는 논의와 소통에 불을 붙입니다. 이런 지역적이고 자체적으로 조직되는 행사를 TEDx라고 부르며, x는 독립적으로 조직된 TED 행사임을 가리킵니다. TED 컨퍼런스는 TEDx 행사를 위해서 가이드라인을 제공하지만, 독립적인 TEDx 행사는 (어떤 규칙이나 제한은 있지만) 자체적으로 조직됩니다. </p>
+        <div class="col-xs-6 left">
+          <div class="thumbnail">
+            <img src="./images/tedx.png">
           </div>
-
-          <div class="col-xs-6">
-            <div class="thumbnail">
-              <img src="./images/tedxpostech.png">
-            </div>
-            <h3>2017 TEDxPOSTECH<br>FLUX</h3>
-            <p>제4회 TEDxPOSTECH의 주제는 ‘FLUX’입니다. ‘FLUX’의 사전적 의미는 유동, 흐름, 끊임없는 변화입니다. 저희 Oraganizer들은 FLUX의 의미를 끊임없는 소통(연결)에 초점을 두고 있습니다. 특히 ‘소통의 수단과 다양화’라는 큰 주제를 관통하는 가치있는 idea를 POSTECH 구성원들에게 제공하고자 합니다. 저희는 소통을 통해 끊임없는 변화를 맞이하기 위한 계기가 필요하다고 생각하였고, 올해 제4회 TEDxPOSTECH가 여러 idea를 교류할 수 있는 장이 될 것입니다. 여러분이 생각하는 ‘FLUX’는 무엇인가요? 여러분의 많은 관심 부탁드립니다.</p>
-          </div>
-
+          <h3>About TEDx<br>x = independently organized event</h3>
+          <p>TEDx는 널리 퍼져야할 아이디어(ideas worth spreading)라는 정신으로 사람들에게 TED스러운 경험을 나눌 수 있도록 지역적이고 자체적으로 조직되는 프로그램입니다. TEDx 행사에서는 TED 강연 영상과 현장의 연사들이 조화를 이루며 깊이 있는 논의와 소통에 불을 붙입니다. 이런 지역적이고 자체적으로 조직되는 행사를 TEDx라고 부르며, x는 독립적으로 조직된 TED 행사임을 가리킵니다. TED 컨퍼런스는 TEDx 행사를 위해서 가이드라인을 제공하지만, 독립적인 TEDx 행사는 (어떤 규칙이나 제한은 있지만) 자체적으로 조직됩니다. </p>
         </div>
 
-        <div class="row ted">
-          <div class="col-xs-12">
-            <h3>About TED</h3>
-            <p>TED는 '널리 퍼져야 할 아이디어'를 위해 일하는 비영리적인 조직입니다. 30년 전 캘리포니아에서 열린 4일의 컨퍼런스를 시작으로 하여, TED는 여러 개의 계획과 사명을 이루기 위해 성장하였습니다. TED 컨퍼런스에서는는 1년에 2번, 세계를 선도하는 사상가와 실천가가 초청되어 18분 정도의 강연을 합니다. 그리고 이 강연들은 <a href="http://www.TED.com">TED.com</a>에서 어디서든 무료로 볼 수 있게 됩니다. Bill Gates, Jane Goodall, Elizabeth Gilbert, Sir Richard Branson, Nandan Nilekani, Philippe Starck, Ngozi Okonjo-Iweasla, Sal Knan, Daniel Kahneman 등 많은 분들이 TED에서 강연을 해주셨습니다.</p>
-            <p>매년 열리는 TED 컨퍼런스는 캐나다 휘슬러에서의 TEDActive 동시 중계 이벤트와 함께 브리티시컬럼비아주 남서부의 밴쿠버에서 개최됩니다. 또한 매년 열리는 TEDGlobal 컨퍼런스는 브라질의 옛 수도인 라우데자네이루에서 개최됩니다. TED의 미디어 활동은 매일 새로운 TED Talks가 올라오는 TED.com, 전세계의 자원봉사자들로부터 번역된 자막과 대본을 제공하는 Open Translation Project, 그리고 교육적인 내용을 담고 있는 TED-Ed가 있습니다. TED는 세상을 바꾸고자 하는 뛰어난 인재들에게 그들의 소원을 실현시켜주기 위해 매년 TED Prize를 수여하고 있습니다. 또한 TEDx를 만들어 지역에서 개최하는 개개인들과 단체들을 지원하고, TED Fellows 프로그램을 통해 전세계에 있는 세상을 바꾸는 혁신가들의 놀라운 프로젝트와 활동들의 효과를 증폭시키기 위해 지원하고 있습니다.</p>
-            <p><a href="http://twitter.com/TEDTalks" target="_blank">트위터</a>나 <a href="http://www.facebook.com/TED" target="_blank">페이스북</a>에서 TED의 소식들을 받아보세요.</p>
+        <div class="col-xs-6">
+          <div class="thumbnail">
+            <img src="./images/tedxpostech.png">
           </div>
+          <h3>2017 TEDxPOSTECH<br>FLUX</h3>
+          <p>제4회 TEDxPOSTECH의 주제는 ‘FLUX’입니다. ‘FLUX’의 사전적 의미는 유동, 흐름, 끊임없는 변화입니다. 저희 Oraganizer들은 FLUX의 의미를 끊임없는 소통(연결)에 초점을 두고 있습니다. 특히 ‘소통의 수단과 다양화’라는 큰 주제를 관통하는 가치있는 idea를 POSTECH 구성원들에게 제공하고자 합니다. 저희는 소통을 통해 끊임없는 변화를 맞이하기 위한 계기가 필요하다고 생각하였고, 올해 제4회 TEDxPOSTECH가 여러 idea를 교류할 수 있는 장이 될 것입니다. 여러분이 생각하는 ‘FLUX’는 무엇인가요? 여러분의 많은 관심 부탁드립니다.</p>
         </div>
-          
+
       </div>
-    </div>
 
-    <div class="footer">
-      <div class="container">
-        <p class="pull-left">※This independent TEDx event is operated under license from TED.</p>
-        <p class="pull-right"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> tedx.postech.organizer@gmail.com<p>
+      <div class="row ted">
+        <div class="col-xs-12">
+          <h3>About TED</h3>
+          <p>TED는 '널리 퍼져야 할 아이디어'를 위해 일하는 비영리적인 조직입니다. 30년 전 캘리포니아에서 열린 4일의 컨퍼런스를 시작으로 하여, TED는 여러 개의 계획과 사명을 이루기 위해 성장하였습니다. TED 컨퍼런스에서는는 1년에 2번, 세계를 선도하는 사상가와 실천가가 초청되어 18분 정도의 강연을 합니다. 그리고 이 강연들은 <a href="http://www.TED.com">TED.com</a>에서 어디서든 무료로 볼 수 있게 됩니다. Bill Gates, Jane Goodall, Elizabeth Gilbert, Sir Richard Branson, Nandan Nilekani, Philippe Starck, Ngozi Okonjo-Iweasla, Sal Knan, Daniel Kahneman 등 많은 분들이 TED에서 강연을 해주셨습니다.</p>
+          <p>매년 열리는 TED 컨퍼런스는 캐나다 휘슬러에서의 TEDActive 동시 중계 이벤트와 함께 브리티시컬럼비아주 남서부의 밴쿠버에서 개최됩니다. 또한 매년 열리는 TEDGlobal 컨퍼런스는 브라질의 옛 수도인 라우데자네이루에서 개최됩니다. TED의 미디어 활동은 매일 새로운 TED Talks가 올라오는 TED.com, 전세계의 자원봉사자들로부터 번역된 자막과 대본을 제공하는 Open Translation Project, 그리고 교육적인 내용을 담고 있는 TED-Ed가 있습니다. TED는 세상을 바꾸고자 하는 뛰어난 인재들에게 그들의 소원을 실현시켜주기 위해 매년 TED Prize를 수여하고 있습니다. 또한 TEDx를 만들어 지역에서 개최하는 개개인들과 단체들을 지원하고, TED Fellows 프로그램을 통해 전세계에 있는 세상을 바꾸는 혁신가들의 놀라운 프로젝트와 활동들의 효과를 증폭시키기 위해 지원하고 있습니다.</p>
+          <p><a href="http://twitter.com/TEDTalks" target="_blank">트위터</a>나 <a href="http://www.facebook.com/TED" target="_blank">페이스북</a>에서 TED의 소식들을 받아보세요.</p>
+        </div>
       </div>
+
     </div>
-
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-68683638-1', 'auto');
-      ga('send', 'pageview');
-
-    </script>
-	
-  </body>
-</html>
+  </div>
+</main>
+{% endblock %}
