--- a/core/templates/core/footer.html
+++ b/core/templates/core/footer.html
@@ -1,6 +1,6 @@
-<footer class="footer">
+<footer class="border-top">
     <div class="container-fluid">
-        ※ This independent TEDx event is operated under license from TED.
-        <span class="text-muted float-right"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> tedx.postech.organizer@gmail.com</span>
+        <p class="text-muted d-inline-block my-2">※ This independent TEDx event is operated under license from TED.</p>
+        <a href="mailto:tedx.postech.organizer@gmail.com" class="text-muted float-right my-2"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> tedx.postech.organizer@gmail.com</a>
     </div>
 </footer>
